# tcb

./: .gitignore  CMakeLists.txt  install.sh  readme.md  tcb-watch.service  tcb-watch.sh  tcb.service  tcb.sh
include/: core.h  daemon.h  defines.h  helper.h  log.h  main.h  protocol.h  socket.h  storage.h  tcb.h
src/: daemon.c  log.c  main.c  socket.c
src/tcb-daemon/: daemon.c  helper.c  log.c  main.c  socket.c  storage.c
src/tcb-pull/: main.c
src/tcb-push/: main.c
